--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,13 +5,15 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="7" />
-
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
             android:name=".EpuActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:configChanges="orientation"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
