--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,21 +5,32 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="7" />
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    
+    <uses-permission android:name="android.permission.INTERNET" >
+        
+    </uses-permission>
+
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" 
+        android:debuggable="true">
         <activity
             android:name=".EpuActivity"
-            android:label="@string/app_name" 
             android:configChanges="orientation"
-            >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".EpuMaps" >
+            <intent-filter android:label="EPUMAPS" >
+                <action android:name="com.android.epu.EpuMaps" >
+                </action>
+            </intent-filter>
+        </activity>
+        <uses-library android:name="com.google.android.maps" />
     </application>
 
 </manifest>
