--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,12 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="lib" path="commons-codec-1.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="commons-logging-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="fluent-hc-4.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="httpclient-4.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="httpclient-cache-4.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="httpcore-4.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="httpmime-4.2.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
