--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,10 +6,9 @@
 
     <uses-sdk android:minSdkVersion="7" />
     
-    <uses-permission android:name="android.permission.INTERNET" >
-        
-    </uses-permission>
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" 
@@ -27,6 +26,12 @@
         <activity android:name=".EpuMaps" >
             <intent-filter android:label="EPUMAPS" >
                 <action android:name="com.android.epu.EpuMaps" >
+                </action>
+            </intent-filter>
+        </activity>
+        <activity android:name=".EpuReport" >
+            <intent-filter android:label="EPUREPORT" >
+                <action android:name="com.android.epu.EpuReport" >
                 </action>
             </intent-filter>
         </activity>
