--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,14 +5,16 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="7" />
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
+        android:debuggable="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" 
-        android:debuggable="true">
+        android:label="@string/app_name" >
         <activity
             android:name=".EpuActivity"
             android:configChanges="orientation"
@@ -32,6 +34,12 @@
         <activity android:name=".EpuReport" >
             <intent-filter android:label="EPUREPORT" >
                 <action android:name="com.android.epu.EpuReport" >
+                </action>
+            </intent-filter>
+        </activity>
+        <activity android:name=".EpuCamera" >
+            <intent-filter android:label="EPUCAMERA" >
+                <action android:name="com.android.epu.EpuCamera" >
                 </action>
             </intent-filter>
         </activity>
